--- a/custregister.html
+++ b/custregister.html
@@ -432,18 +432,22 @@
         <div class="register-box">
             <h2 class="register-title">JOIN THE NEXUS</h2>
             <form id="registrationForm" action="register_customer.php" method="post">
+
                 <div class="form-group">
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first-name" name="first_name" required>
+                    <label for="first_name">FIRST NAME</label>
+                    <input type="text" id="first_name" name="first_name" required>
                 </div>
+
                 <div class="form-group">
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last-name" name="last_name" required>
+                    <label for="last_name">LAST NAME</label>
+                    <input type="text" id="last_name" name="last_name" required>
                 </div>
+
                 <div class="form-group">
                     <label for="email">EMAIL</label>
                     <input type="email" id="email" name="email" required>
                 </div>
+
                 <div class="form-group">
                     <label for="phone">PHONE</label>
                     <input type="tel" id="phone" name="phone" required>
