--- a/custregister.html
+++ b/custregister.html
@@ -442,6 +442,10 @@
                     <label for="last_name">LAST NAME</label>
                     <input type="text" id="last_name" name="last_name" required>
                 </div>
+                <div class="form-group">
+                     <label for="username">USERNAME</label>
+                     <input type="text" id="username" name="username" required>
+                </div>
 
                 <div class="form-group">
                     <label for="email">EMAIL</label>
@@ -450,7 +454,7 @@
 
                 <div class="form-group">
                     <label for="phone">PHONE</label>
-                    <input type="tel" id="phone" name="phone" required>
+                    <input type="tel" id="phone" name="phone" required pattern="[0-9]{10,15}" title="Enter a valid phone number (10-15 digits)">
                 </div>
                 <div class="form-group">
                     <label for="address">ADDRESS</label>
@@ -463,23 +467,30 @@
                         </div>
                         <div class="form-group">
                             <label for="state">STATE</label>
-                            <input type="text" id="state" name="state" required>
+                            <select id="state" name="state" required>
+    <option value="">Select State</option>
+    <option value="Johor">Johor</option>
+    <option value="Kedah">Kedah</option>
+    <option value="Kelantan">Kelantan</option>
+    <option value="Melaka">Melaka</option>
+    <option value="Negeri Sembilan">Negeri Sembilan</option>
+    <option value="Pahang">Pahang</option>
+    <option value="Perak">Perak</option>
+    <option value="Perlis">Perlis</option>
+    <option value="Pulau Pinang">Pulau Pinang</option>
+    <option value="Sabah">Sabah</option>
+    <option value="Sarawak">Sarawak</option>
+    <option value="Selangor">Selangor</option>
+    <option value="Terengganu">Terengganu</option>
+    <option value="Kuala Lumpur">Kuala Lumpur</option>
+    <option value="Labuan">Labuan</option>
+    <option value="Putrajaya">Putrajaya</option>
+</select>
+                          
                         </div>
                         <div class="form-group">
                             <label for="postcode">POSTCODE</label>
                             <input type="text" id="postcode" name="postcode" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="country">COUNTRY</label>
-                            <select id="country" name="country" required>
-                                <option value="">Select Country</option>
-                                <option value="Malaysia">Malaysia</option>
-                                <option value="Singapore">Singapore</option>
-                                <option value="Indonesia">Indonesia</option>
-                                <option value="Thailand">Thailand</option>
-                                <option value="Philippines">Philippines</option>
-                                <option value="Other">Other</option>
-                            </select>
                         </div>
                     </div>
                 </div>
