--- a/custregister.html
+++ b/custregister.html
@@ -435,21 +435,22 @@
 
                 <div class="form-group">
                     <label for="first_name">FIRST NAME</label>
-                    <input type="text" id="first_name" name="first_name" required>
+                    <input type="text" id="first_name" name="first_name" pattern="[A-Za-z\s]+" title="Only letters and spaces allowed" required>
                 </div>
 
                 <div class="form-group">
                     <label for="last_name">LAST NAME</label>
-                    <input type="text" id="last_name" name="last_name" required>
+                    <input type="text" id="last_name" name="last_name" pattern="[A-Za-z\s]+" title="Only letters and spaces allowed" required>
                 </div>
                 <div class="form-group">
                      <label for="username">USERNAME</label>
-                     <input type="text" id="username" name="username" required>
+                     <input type="text" id="username" name="username" pattern="[A-Za-z\s]+" title="Only letters and spaces allowed" required>
                 </div>
 
                 <div class="form-group">
                     <label for="email">EMAIL</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
+       title="Enter a valid email like example@domain.com" required>
                 </div>
 
                 <div class="form-group">
