--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <a href="custlogin.html">
                     <i class="fas fa-user"></i>
                 </a>
-                <a href="ADDTOCART.php"><i class="fas fa-shopping-cart"></i></a>
+                <a href="ADDTOCART.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
         </nav>
     </header>
@@ -532,7 +532,7 @@
         <div id="menuContainer">
             <span id="closeMenu">&times;</span>
             <div id="menuContent">
-                <div class="menu-item"><a href="ORDERHISTORY.php">ORDER</a></div>
+                <div class="menu-item"><a href="ORDERHISTORY.html">ORDER</a></div>
                 <div class="menu-item"><a href="custservice.html">HELP</a></div>
                 <div class="menu-item"><a href="login_admin.php">LOGIN ADMIN</a></div>
             </div>
@@ -630,7 +630,7 @@
     <footer>
         <div class="footer-links">
             <a href="ABOUTUS.html">ABOUT US</a>
-            <a href="CONTACT.html">CONTACT</a>
+            <a href="custservice.html">CONTACT</a>
             <a href="TOS.html">TERMS OF SERVICE</a>
         </div>
         
