--- a/custeditprofile.html
+++ b/custeditprofile.html
@@ -338,7 +338,8 @@
                     <div class="profile-image" style="background: rgba(255, 0, 0, 0.2); display: flex; align-items: center; justify-content: center;">
                         <i class="fas fa-user" style="font-size: 3rem; color: var(--primary);"></i>
                     </div>
-                <?php endif; ?>
+                <?php endif; 
+                ?>
                 <input type="file" name="profile_pic" class="form-control" style="width: auto;">
             </div>
             
