--- a/custregister.html
+++ b/custregister.html
@@ -507,7 +507,9 @@ title="Enter a valid email like example@domain.com">
                 </div>
                <div class="form-group" style="position: relative;">
     <label for="password">PASSWORD</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            title="Must contain at least one number, one lowercase letter, one uppercase letter, one special character, and be at least 8 characters long"
+             required>
     <span onclick="togglePassword('password')" style="position:absolute; top:65%; right:10px; transform:translateY(-50%); cursor:pointer;">
         👁️
     </span>
@@ -515,7 +517,9 @@ title="Enter a valid email like example@domain.com">
 
 <div class="form-group" style="position: relative;">
     <label for="confirm-password">CONFIRM PASSWORD</label>
-    <input type="password" id="confirm-password" name="confirm-password" required>
+    <input type="password" id="confirm-password" name="confirm-password"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            title="Must contain at least one number, one lowercase letter, one uppercase letter, one special character, and be at least 8 characters long"
+            required>
     <span onclick="togglePassword('confirm-password')" style="position:absolute; top:65%; right:10px; transform:translateY(-50%); cursor:pointer;">
         👁️
     </span>
